Added registration actions and password requirements

--- a/IdentityEx/Views/Home/Register.cshtml
+++ b/IdentityEx/Views/Home/Register.cshtml
@@ -1,6 +1,6 @@
 ﻿<h1>Register Page</h1>
 
-<form action="/" method="post">
+<form action="/home/register" method="post">
     <input type="text" name="userName" value="" />
     <input type="password" name="password" value="" />
     <button type="submit">Register</button>
